turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:11: error: Boolean does not take parameters
  else (getCouleurSol==Color.black){
                                   ^