turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  def setCouleurSol(c:Color){
    setCouleurBrosse(c)
    baisseBrosse()
    leveBrosse()
  }
  if (getCouleurSol()==Color.white){
    setCouleurSol(Color.black)
    droite()
    avance()
  }
  else (getCouleurSol==Color.black){
    setCouleurSol(Color.white)
    gauche()
    avance()
  }
}